--- a/.htaccess
+++ b/.htaccess
@@ -7,7 +7,7 @@ ErrorDocument 404 /404.html
 RewriteEngine on 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.html -f
-RewriteRule ^(.*)$ $1.html [NC,L]
+RewriteRule ^(.*)$ /$1.html [NC,L]
 
 # Add an expires header for images
 <FilesMatch "\.(jpg|jpeg|png|gif|ico)$">
